Details
-
Bug
-
Status: Closed (View Workflow)
-
Minor
-
Resolution: Fixed
-
10.3.31, 10.4.21, 10.5.12, 10.6.4
Description
As noted on bug report MDEV-26922 , invalid parameter detection only happens after SST.
After fixing the invalid parameter, SST will happen again but if there are any other invalid parameter, same will happen, triggering as many SSTs as invalid parameters were in the config file
it would be nice that when MariaDB aborts due to an invalid parameter, it keeps reading the rest of the config file trying to find all invalid lines that there are to minimize the amount of restarts
Attachments
Issue Links
- relates to
-
MDEV-33469 Server incorrectly describes known variables as UNKNOWN if invalid values are specified at startup
-
- Closed
-
-
MDEV-32745 config upgrade helper tool
-
- Closed
-